--- a/dictor/index.html
+++ b/dictor/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>我是名医</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" href="../favicon.png" type="image/x-icon" />
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <script src="../vendor/jquery/jquery.min.js"></script>
     <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
