--- a/dictor/index.html
+++ b/dictor/index.html
@@ -8,6 +8,9 @@
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <script src="../vendor/jquery/jquery.min.js"></script>
     <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <div id='wx_pic' style='margin:0 auto;display:none;'>
+    <img src='../favicon.png' />
+    </div>
 </head>
 <body>
   <div class="container" id="input_name">
