--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <img class="card-img-top" src="http://placehold.it/500x325" alt="">
             <div class="card-body">
               <h4 class="card-title">我是名医</h4>
-              <p class="card-text">点击进入，识别你的病症。</p>
+              <p class="card-text">点击进入，输入姓名，就能诊断出你的病症。</p>
             </div>
             <div class="card-footer">
               <a href="dictor" class="btn btn-primary">点击测试</a>
