--- a/dictor/index.html
+++ b/dictor/index.html
@@ -15,7 +15,7 @@
     <div class="double-bounce1"></div>
     <div class="double-bounce2"></div>
   </div>
-  <div class="container" id="input_name">
+  <div class="container" id="input_name" style="margin-top: 100px;">
       <div class="row text-center main" style="padding: 15px;">
         <div class="form-group" style="width: 100%">
           <label for="exampleFormControlInput1">输入姓名，点击测试，就能诊断出你的病症。</label>
@@ -24,11 +24,11 @@
         <button type="button" class="btn btn-primary" onclick="init()">点击测试</button>
       </div>
   </div>
-  
+
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <!-- 扫码底部广告 -->
   <ins class="adsbygoogle"
-       style="display:block"
+       style="display:block;height: 100px;position: fixed;top: 0;"
        data-ad-client="ca-pub-9540087096615057"
        data-ad-slot="2398558510"
        data-ad-format="auto"></ins>
