--- a/dictor/index.html
+++ b/dictor/index.html
@@ -28,7 +28,7 @@
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <!-- 扫码底部广告 -->
   <ins class="adsbygoogle"
-       style="display:block; position: fixed;top: 0;"
+       style="display:block;"
        data-ad-client="ca-pub-9540087096615057"
        data-ad-slot="2398558510"
        data-ad-format="auto"></ins>
