--- a/dictor/index.html
+++ b/dictor/index.html
@@ -15,7 +15,7 @@
     <div class="double-bounce1"></div>
     <div class="double-bounce2"></div>
   </div>
-  <div class="container" id="input_name" style="margin-top: 100px;">
+  <div class="container" id="input_name">
       <div class="row text-center main" style="padding: 15px;">
         <div class="form-group" style="width: 100%">
           <label for="exampleFormControlInput1">输入姓名，点击测试，就能诊断出你的病症。</label>
