--- a/dictor/index.html
+++ b/dictor/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../css/spinner.css">
 </head>
 <body>
-  <div style="width: 100%;height: 100;position: fixed;">
+  <div style="width: 100%;height: 100;position: fixed;top: 0">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <!-- 扫码底部广告 -->
   <ins class="adsbygoogle"
