--- a/dictor/index.html
+++ b/dictor/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../css/spinner.css">
 </head>
 <body>
-  <div style="width: 100%;height: 100;position: fixed;top: 0">
+  <div style="width: 100%;height: 100;position: fixed;top: 0" id="ad">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <!-- 扫码底部广告 -->
   <ins class="adsbygoogle"
@@ -63,6 +63,8 @@
       var loading = document.getElementById("loading");
       loading.style.display = "none";
       canvas.parentNode.removeChild(canvas);
+      var ad = document.getElementById("ad");
+      ad.parentNode.removeChild(ad);
       document.body.appendChild(img);
     };
   }
