--- a/dictor/index.html
+++ b/dictor/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../css/spinner.css">
 </head>
 <body>
-  <div style="width: 100%;height: 100;position: fixed;top: 0" id="ad">
+  <div style="width: 100%;height: 100;position: fixed;bottom: 0" id="ad">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <!-- 扫码底部广告 -->
   <ins class="adsbygoogle"
@@ -27,7 +27,7 @@
     <div class="double-bounce1"></div>
     <div class="double-bounce2"></div>
   </div>
-  <div class="container" id="input_name" style="margin-top: 100px;">
+  <div class="container" id="input_name">
       <div class="row text-center main" style="padding: 15px;">
         <div class="form-group" style="width: 100%">
           <label for="exampleFormControlInput1">输入姓名，点击测试，就能诊断出你的病症。</label>
