--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="row text-center main">
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+            <img class="card-img-top" src="images/doctor.jpg" alt="">
             <div class="card-body">
               <h4 class="card-title">我是名医</h4>
               <p class="card-text">点击进入，输入姓名，就能诊断出你的病症。</p>
@@ -49,13 +49,13 @@
 
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+            <img class="card-img-top" src="images/annualbonus.jpg" alt="">
             <div class="card-body">
-              <h4 class="card-title">敬请期待</h4>
-              <p class="card-text">敬请期待</p>
+              <h4 class="card-title">我的年终奖</h4>
+              <p class="card-text">输入公司名称，快速生成属于自己的年终奖</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">点击测试</a>
+              <a href="annualbonus" class="btn btn-primary">点击测试</a>
             </div>
           </div>
         </div>
@@ -82,5 +82,17 @@
     </footer>
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+      <div style="width: 100%;height: 100;position: fixed;bottom: 0" id="ad">
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- 扫码底部广告 -->
+  <ins class="adsbygoogle"
+       style="display:block;"
+       data-ad-client="ca-pub-9540087096615057"
+       data-ad-slot="2398558510"
+       data-ad-format="auto"></ins>
+  <script>
+  (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+  </div>
   </body>
 </html>
