--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <p class="card-text">点击进入，输入姓名，就能诊断出你的病症。</p>
             </div>
             <div class="card-footer">
-              <a href="dictor" class="btn btn-primary">点击测试</a>
+              <a href="doctor" class="btn btn-primary">点击测试</a>
             </div>
           </div>
         </div>
