--- a/annualbonus/index.html
+++ b/annualbonus/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>我是名医</title>
+    <title>我的年终奖</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="../favicon.png" type="image/x-icon" />
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
