forbib wechat scroll

--- a/annualbonus/index.html
+++ b/annualbonus/index.html
@@ -10,6 +10,9 @@
 
       gtag('config', 'UA-89103576-5');
     </script>
+    <script type="text/javascript">
+      document.addEventListener('touchmove', function(e){e.preventDefault()}, false);
+    </script>
     <meta charset="UTF-8">
     <title>我的年终奖</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
