--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
       gtag('config', 'UA-89103576-5');
     </script>
+    <script type="text/javascript">
+      document.addEventListener('touchmove', function(e){e.preventDefault()}, false);
+    </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="favicon.png" type="image/x-icon" />
