--- a/gaokao/index.html
+++ b/gaokao/index.html
@@ -50,7 +50,7 @@
           <input type="email" class="form-control" id="school" placeholder="输入学校">
         </div>
         <button type="button" class="btn btn-primary" onclick="init()">点击生成</button>
-        <a class="btn btn-success" style="margin-left: 20px;" href="/">更多功能</a>
+        <!-- <a class="btn btn-success" style="margin-left: 20px;" href="/">更多功能</a> -->
       </div>
   </div>
 </body>
