--- a/gaokao/index.html
+++ b/gaokao/index.html
@@ -1,94 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-89103576-5"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-89103576-5');
-    </script>
-    <script type="text/javascript">
-      document.addEventListener('touchmove', function(e){e.preventDefault()}, false);
-    </script>
-    <meta charset="UTF-8">
-    <title>生成准考证</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" href="../favicon.png" type="image/x-icon" />
-    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <script src="../vendor/jquery/jquery.min.js"></script>
-    <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="../css/spinner.css">
-</head>
-<body>
-  <div style="width: 100%;height: 120px;position: fixed;bottom: 0" id="ad">
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <!-- 扫码底部广告 -->
-  <ins class="adsbygoogle"
-       style="display:block;"
-       data-ad-client="ca-pub-9540087096615057"
-       data-ad-slot="2398558510"
-       data-ad-format="auto"></ins>
-  <script>
-  (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
-  </div>
-  <div class="spinner" id="loading" style="display: none">
-    <div class="double-bounce1"></div>
-    <div class="double-bounce2"></div>
-  </div>
-  <div class="container" id="input_name">
-      <div class="row text-center main" style="padding: 15px;">
-        <div class="form-group" style="width: 100%">
-          <label for="exampleFormControlInput1">输入姓名，性别，考点快速生成自己的准考证吧</label>
-          <input type="email" class="form-control" id="name" placeholder="输入姓名">
-          <br>
-          <input type="email" class="form-control" id="gender" maxlength="1" placeholder="输入性别">
-          <br>
-          <input type="email" class="form-control" id="school" placeholder="输入学校">
-        </div>
-        <button type="button" class="btn btn-primary" onclick="init()">点击生成</button>
-        <!-- <a class="btn btn-success" style="margin-left: 20px;" href="/">更多功能</a> -->
-      </div>
-  </div>
-</body>
-<script type="text/javascript">
-  function init(){
-    var name = document.getElementById("name").value;
-    var gender = document.getElementById("gender").value;
-    var school = document.getElementById("school").value;
-    if(!name || name == "" || name == undefined) return;
-    if(!gender || gender == "" || gender == undefined) return;
-    if(!school || school == "" || school == undefined) return;
-    var width = document.body.clientWidth;
-    var canvas = document.createElement("canvas");
-    canvas.id = "canvas";
-    document.body.appendChild(canvas);
-    var img = new Image(width,((640 / 400) * width));   
-    img.src = 'image.jpeg';
-    var loading = document.getElementById("loading");
-    loading.style.display = "block";
-    document.getElementById("input_name").style.display = "none";
-    img.onload = function() {
-      var canvas = document.getElementById('canvas');
-      var ctx = canvas.getContext('2d');
-      canvas.width = this.width;
-      canvas.height = this.height;
-      ctx.drawImage(this, 0, 0, this.width, this.height);
-      ctx.font= 18/400 * this.width + 'px microsoft yahei';
-      ctx.fillStyle = "rgba(26, 26, 26, 1)";
-      ctx.fillText(name,(403 / 799) * this.width, (417/1071)*this.height );
-      ctx.fillText(gender,(642 / 799) * this.width, (417/1071)*this.height );
-      ctx.fillText(school,(403 / 799) * this.width, (486/1071)*this.height );
-      img.src = canvas.toDataURL("image/jpeg");
-      var loading = document.getElementById("loading");
-      loading.style.display = "none";
-      canvas.parentNode.removeChild(canvas);
-      var ad = document.getElementById("ad");
-      ad.parentNode.removeChild(ad);
-      document.body.appendChild(img);
-    };
-  }
-</script>
+<h1>您访问的页面不存在</h1>
